--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .middle-everything{
     display: flex;
     flex-direction: column;
@@ -6,7 +5,7 @@
     align-items: center;
 }
 
-#search-error{
+#search-error,#wrong-input-error{
     color:red;
     font-weight: bold;
     font-size: larger;
@@ -14,7 +13,6 @@
     display: none;
 }
 hr{
-    font-weight: bold;
     color:red;
     margin-bottom: 40px;
 }
